# taraassistant-public

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  PLAN.md  README.md  compose.yaml  install.ps1  install.sh  pyproject.toml  repository.yaml  requirements.txt
Website UI/: COMPONENT_REFERENCE.md  DESIGN_SYSTEM.md
Website UI/src/app/: App.tsx
Website UI/src/app/components/: ChatMessage.tsx  CozyCard.tsx  DesignShowcase.tsx  DesignTokens.tsx  EmptyState.tsx  InsightsPanel.tsx  LoadingSpinner.tsx  QuickAction.tsx  StatusBadge.tsx
Website UI/src/styles/: fonts.css  theme.css
app/: config.py  guardrails.py  main.py  memory.py  usage.py
app/agents/: home_assistant_agent.py
app/middleware/: __init__.py  ingress.py  rate_limiter.py  setup_redirect.py
app/patterns/: collector.py  database.py  scheduler.py  suggestions.py
app/providers/: llm.py
app/setup/: entity_cache.py  storage.py  templates.py  validators.py
homeassistant-addon/: build.sh
homeassistant-addon/tara-assistant/: CHANGELOG.md  DOCS.md  Dockerfile  config.yaml  run.sh
homeassistant-addon/tara-assistant/app/: __init__.py  config.py  fast_path.py  intent_classifier.py  main.py  usage.py
homeassistant-addon/tara-assistant/app/middleware/: setup_redirect.py
homeassistant-addon/tara-assistant/app/patterns/: __init__.py  detector.py  models.py
homeassistant-addon/tara-assistant/app/setup/: __init__.py  encryption.py  models.py  routes.py  storage.py  validators.py
homeassistant-addon/tara-assistant/translations/: en.yaml
tests/: test_patterns.py
(+1 files in other folders)
