[project]
name = "tara-assistant"
version = "1.0.0"
description = "AI-powered Home Assistant controller"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "httpx>=0.25.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "openai>=1.3.0",
    "anthropic>=0.7.0",
    "google-genai>=0.3.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
ollama = ["ollama>=0.1.0"]
dev = ["pytest", "black", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
